--- a/Cleaning_Workbook.ipynb
+++ b/Cleaning_Workbook.ipynb
@@ -9,7 +9,7 @@
     "Please fill out:\n",
     "* Student name: Tia Plagata\n",
     "* Student pace: full time\n",
-    "* Scheduled project review date/time: \n",
+    "* Scheduled project review date/time: 10/19 10am EST\n",
     "* Instructor name: Rafael Carrasco\n",
     "* Blog post URL:\n"
    ]
